--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -54,6 +54,12 @@
                     </li>
 
                     <li class="sidebar">
+                        <a routerLink="/assigned-leads">
+                            <i class="fas fa-phone-volume"></i>
+                            <span>Assigned Leads</span>
+                        </a>
+                    </li>
+                    <li class="sidebar">
                         <a routerLink="/register">
                             <i class="fa fa-tachometer-alt"></i>
                             <span>Register</span>
