--- a/src/app/dashboard/assigned-leads/assigned-leads.component.html
+++ b/src/app/dashboard/assigned-leads/assigned-leads.component.html
@@ -1,42 +1,28 @@
-<!-- <div class=""> -->
 <div class="row">
-    <div class="col-12">
+    <div class="col-lg-12 col-sm-12 col-md-2">
         <app-header></app-header>
     </div>
 </div>
 <div class="row">
-    <div class="col-2">
-        <!-- <app-header></app-header> -->
+    <div class="col-md-2 col-lg-2 col-sm-2">
         <app-dashboard></app-dashboard>
     </div>
-
-    <div class="col-9">
-        <div class="inventory">
-            <br />
-            <h1><b>Inventory Management</b></h1>
-            <br />
-            <div>
-                <button class="btn btn-primary" (click)="setFormTitle('Inventory')">
-          Add New
-        </button>
-            </div>
-
+    <div class="col-md-9 col-lg-9 col-sm-9">
+        <div class="both">
+            <h1><b>Assigned Leads Table</b></h1>
+            <br>
+            <!-- <div>
+                <button class="btn btn-primary">Add New</button>
+            </div> -->
             <div class="pull-right">
                 <div class="card-body row">
-                    <!--end of col-->
                     <div class="col">
-                        <input class="form-control" id="myInput" type="text" [(ngModel)]="general_search" placeholder="Search topic or keyword" />
+                        <input class="form-control" id="myInput" type="text" placeholder="Search topic or keyword">
                     </div>
-
-                    <button onclick="window.print()" class="btn btn-primary">
-            Print
-          </button> &nbsp; &nbsp; &nbsp;<button (click)="exportTOExcel()" class="btn btn-primary">
-            Excel
-          </button>
+                    <button onclick="window.print()" class="btn btn-primary">Print</button> &nbsp; &nbsp;
+                    <button class="btn btn-primary">Excel</button>
                 </div>
             </div>
-            <br /><br /><br />
-            <!-- Inventory management table is below -->
 
             <table class="table table-hover">
                 <thead>
@@ -109,12 +95,11 @@
                         <td>{{ user.beds_number }}</td>
                         <!-- <td>{{ user.assigned_to | titlecase}}</td> -->
                         <td>
-                            <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i
-              ><a (click)="setUserToEdit(user)" role="button"></a>
+                            <i class="fa fa-edit icon"></i
+              ><a  role="button"></a>
 
               <i
                 class="fa fa-trash icon"
-                (click)="confirmID(user._id)"
                 data-toggle="modal"
                 data-target="#exampleModal1"
               ></i>
@@ -137,7 +122,7 @@
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">
                       Close
                     </button>
-                                        <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteInventory()">
+                                        <button type="button" class="btn btn-danger" data-dismiss="modal">
                       Delete
                     </button>
                                     </div>
