--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -44,11 +44,13 @@
                     <th scope="col">Purpose</th>
                     <th scope="col">Client Details</th>
                     <th scope="col">Location</th>
+                    <th scope="col">Type</th>
                     <th scope="col">Land Area</th>
                     <th scope="col">Client Type</th>
                     <th scope="col">Demand</th>
 
                     <th scope="col">Beds</th>
+                    <th scope="col">Added On</th>
                     <!-- <th scope="col">Agent Assigned</th> -->
                     <th scope="col">Operations</th>
                 </thead>
@@ -96,6 +98,8 @@
                             {{ user.city[0]?.city }}<span></span><br /><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},
               </span>
                         </td>
+
+                        <td>{{ user.property_type }}</td>
                         <td *ngIf="user.area == null else elseBlockArea"><b>Max:</b> {{ user.max_area + " - " + user.area_unit}}<br><b>Min:</b> {{ user.min_area + " - " + user.area_unit}}</td>
                         <ng-template #elseBlockArea>
                             <td>{{ user.area + " - " + user.area_unit}}</td>
@@ -107,6 +111,7 @@
                         </ng-template>
 
                         <td>{{ user.beds_number }}</td>
+                        <td>{{ user.created | date }}</td>
                         <!-- <td>{{ user.assigned_to | titlecase}}</td> -->
                         <td>
                             <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i
