--- a/src/app/dashboard/both/both.component.html
+++ b/src/app/dashboard/both/both.component.html
@@ -35,7 +35,7 @@
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th scope="col">ID</th>
+                        <th (click)="sort('id')" scope="col">ID <i class="fa fa-sort"></i></th>
                         <th scope="col">Purpose</th>
                         <th scope="col">Client</th>
                         <th scope="col">Client Type</th>
@@ -55,7 +55,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let user of user | filter: general_search">
+                    <tr *ngFor="let user of user | filter: general_search | orderBy: key: reverse | paginate:{itemsPerPage:10,currentPage:p};">
                         <!-- | tableFilter06: search_client | tableFilter05: search_demand | tableFilter04: search_type | tableFilter03: search_area | tableFilter02: search_location | tableFilter: search_id -->
                         <td>{{ user?.referenceId }}</td>
                         <td>{{ user?.property_purpose }}</td>
@@ -110,6 +110,7 @@
                     </tr>
                 </tbody>
             </table>
+            <pagination-controls (pageChange)="p = $event"></pagination-controls>
         </div>
     </div>
 </div>
