--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -40,7 +40,7 @@
 
             <table class="table table-hover">
                 <thead>
-                    <th scope="col">ID</th>
+                    <th (click)="sort('id')" scope="col">ID <i class="fa fa-sort"></i></th>
                     <th scope="col">Purpose</th>
                     <th scope="col">Client Details</th>
                     <th scope="col">Location</th>
@@ -48,7 +48,6 @@
                     <th scope="col">Land Area</th>
                     <th scope="col">Client Type</th>
                     <th scope="col">Demand</th>
-
                     <th scope="col">Beds</th>
                     <th scope="col">Added On</th>
                     <!-- <th scope="col">Agent Assigned</th> -->
@@ -86,7 +85,7 @@
                 <td>
                     <i class="fa fa-search icon"></i>
                 </td> -->
-                    <tr *ngFor="let user of user | filter: general_search">
+                    <tr *ngFor="let user of user | filter: general_search | orderBy: key: reverse | paginate:{itemsPerPage:10,currentPage:p}; ">
                         <!-- | tableFilter05: search_demand | tableFilter04: search_type | tableFilter03: search_area | tableFilter02: search_location | tableFilter: search_id | filter: general_search"> -->
                         <td>{{ user.referenceId }}</td>
                         <td>{{ user.property_purpose }}</td>
@@ -152,6 +151,7 @@
                     </tr>
                 </tbody>
             </table>
+            <pagination-controls (pageChange)="p = $event"></pagination-controls>
         </div>
     </div>
 </div>
