--- a/src/app/dashboard/users/users.component.html
+++ b/src/app/dashboard/users/users.component.html
@@ -32,7 +32,7 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th scope="col">User ID</th>
+                            <th (click)="sort('id')" scope="col">User ID <i class="fa fa-sort"></i></th>
                             <th scope="col">Full Name</th>
                             <th scope="col">Contact #</th>
                             <th scope="col">Location Assigned</th>
@@ -70,14 +70,14 @@
                     <i class="fa fa-search icon"></i>
                 </td> -->
 
-                        <tr *ngFor="let user of data | filter: general_search">
+                        <tr *ngFor="let user of data | filter: general_search | orderBy: key: reverse | paginate:{itemsPerPage:10,currentPage:p};">
                             <!-- | tableFilter06: data.fullname | tableFilter04: data.contact | tableFilter02: data.location | tableFilter: data.userId | filter: general_search"> -->
                             <td>{{ user?.userId }}</td>
                             <td>
                                 <span *ngIf="user?.fullname">{{ user?.fullname | titlecase }}</span>
                                 <span *ngIf="!user?.fullname">{{ user?.name | titlecase }}</span>
                             </td>
-                            <td>0{{ user?.contact }}</td>
+                            <td>+92{{ user?.contact }}</td>
                             <!-- <td>{{ user.location}}</td> -->
 
                             <td>
@@ -119,6 +119,7 @@
                         </tr>
                     </tbody>
                 </table>
+                <pagination-controls (pageChange)="p = $event"></pagination-controls>
                 <!-- end of table -->
             </div>
         </div>
